<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dynamic_list"
    tools:context=".MainActivity">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/main_logo"
        android:layout_width="239dp"
        android:layout_height="208dp"
        android:src="@drawable/logo"
        app:civ_border_color="#2CD319"
        app:civ_border_width="5dp"
        app:civ_shadow="true"
        app:civ_shadow_color="#0E951C"
        app:civ_shadow_radius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/playerName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338" />

    <EditText
        android:id="@+id/playerName"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        android:background="#19F3E9E9"
        android:drawableStart="@drawable/ic_person_vector"
        android:hint="@string/Enter_players_name"
        android:imeOptions="actionSend"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHighlight="#2CDDCF"
        android:textColorHint="@color/white"
        android:textColorLink="#08BCD8"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_enterRace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.927" />

    <Button
        android:id="@+id/button_enterRace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/playerName"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/main_buttons"
        android:text="  Enter Race  "
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_Leaderboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959" />

    <Button
        android:id="@+id/button_Leaderboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_enterRace"
        android:layout_centerInParent="true"
        android:layout_marginBottom="96dp"
        android:background="@drawable/main_buttons"
        android:text="LeaderBoard "
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>